tests/a/tests/integrity/fail/loop/for.2.stderr
error: expected {bin}{bin}, found {bin}{b,bin,c}
  --> tests/integrity/fail/loop/for.2.rs:13:17
   |
13 |             x = 1;
   |                 ^
